Fix overflow style in `SelectTagForm`

--- a/frontend-react/src/components/organisms/SelectTagForm/SelectTagForm.module.css
+++ b/frontend-react/src/components/organisms/SelectTagForm/SelectTagForm.module.css
@@ -10,6 +10,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: var(--space-1);
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 .tagContainer {
